# serializer version: 1
# name: test_generate_form_upload[files_router_form_upload]
  '''
  # Generated by pyoas — do not edit manually. spec: 6cc6a774
  from __future__ import annotations
  
  from typing import Annotated
  from fastapi import APIRouter, File, Form, UploadFile
  
  router = APIRouter(tags=["files"])
  
  
  @router.post("/form", summary="Submit a form")
  async def submit_form(
      *,
      username: Annotated[str, Form()],
      age: Annotated[int | None, Form()] = None,
  ) -> None:
      raise NotImplementedError
  
  
  @router.post("/upload", summary="Upload a file with metadata")
  async def upload_file(
      *,
      file: Annotated[UploadFile, File()],
      name: Annotated[str, Form()],
      description: Annotated[str | None, Form()] = None,
  ) -> None:
      raise NotImplementedError
  
  
  
  '''
# ---
# name: test_generate_generic_paginated[fleet_router_generic]
  '''
  # Generated by pyoas — do not edit manually. spec: c9851eb5
  from __future__ import annotations
  
  from fastapi import APIRouter
  from generated.models.fleet import DriverListItem
  from generated.models.shared import Paginated
  
  router = APIRouter(tags=["fleet"])
  
  
  @router.get("/fleet/drivers", response_model=Paginated[DriverListItem], summary="List drivers (paginated)")
  async def list_drivers(
  ) -> Paginated[DriverListItem]:
      raise NotImplementedError
  
  
  
  '''
# ---
# name: test_generate_generic_paginated[users_router_generic]
  '''
  # Generated by pyoas — do not edit manually. spec: c9851eb5
  from __future__ import annotations
  
  from fastapi import APIRouter
  from generated.models.users import UserListItem
  from generated.models.shared import Paginated
  
  router = APIRouter(tags=["users"])
  
  
  @router.get("/users", response_model=Paginated[UserListItem], summary="List users (paginated)")
  async def list_users(
  ) -> Paginated[UserListItem]:
      raise NotImplementedError
  
  
  
  '''
# ---
# name: test_generate_inline_schemas[reports_router_inline_schemas]
  '''
  # Generated by pyoas — do not edit manually. spec: 8579ead8
  from __future__ import annotations
  
  from typing import Annotated
  from fastapi import APIRouter, Body
  from generated.models.reports import CreateReportBody, CreateReportResponse
  
  router = APIRouter(tags=["reports"])
  
  
  @router.post("/reports", response_model=CreateReportResponse, status_code=201, summary="Create a report with an inline request body")
  async def create_report(
      *,
      body: Annotated[CreateReportBody, Body()],
  ) -> CreateReportResponse:
      raise NotImplementedError
  
  
  
  '''
# ---
# name: test_generate_multi_tag[orders_router]
  '''
  # Generated by pyoas — do not edit manually. spec: fc81cd90
  from __future__ import annotations
  
  from typing import Annotated
  from fastapi import APIRouter, Path
  import uuid
  from generated.models.orders import Order
  
  router = APIRouter(tags=["orders"])
  
  
  @router.get("/orders", response_model=list[Order])
  async def list_orders(
  ) -> list[Order]:
      raise NotImplementedError
  
  
  @router.get("/orders/{orderId}", response_model=Order)
  async def get_order(
      *,
      order_id: Annotated[uuid.UUID, Path(alias="orderId")],
  ) -> Order:
      raise NotImplementedError
  
  
  
  '''
# ---
# name: test_generate_multi_tag[root_init_multi]
  '''
  # Generated by pyoas — do not edit manually. spec: fc81cd90
  from __future__ import annotations
  
  from .users import router as users_router  # noqa: F401
  from .orders import router as orders_router  # noqa: F401
  
  '''
# ---
# name: test_generate_multi_tag[users_router]
  '''
  # Generated by pyoas — do not edit manually. spec: fc81cd90
  from __future__ import annotations
  
  from typing import Annotated
  from fastapi import APIRouter, Path
  import uuid
  from generated.models.users import User
  
  router = APIRouter(tags=["users"])
  
  
  @router.get("/users", response_model=list[User])
  async def list_users(
  ) -> list[User]:
      raise NotImplementedError
  
  
  @router.get("/users/{userId}", response_model=User)
  async def get_user(
      *,
      user_id: Annotated[uuid.UUID, Path(alias="userId")],
  ) -> User:
      raise NotImplementedError
  
  
  
  '''
# ---
# name: test_generate_no_tags[default_router]
  '''
  # Generated by pyoas — do not edit manually. spec: 755f55c6
  from __future__ import annotations
  
  from typing import Annotated
  from fastapi import APIRouter, Body, Path
  from generated.models.default import CreateItemRequest, Item
  
  router = APIRouter(tags=["default"])
  
  
  @router.get("/items", response_model=list[Item], summary="List items")
  async def list_items(
  ) -> list[Item]:
      raise NotImplementedError
  
  
  @router.post("/items", response_model=Item, status_code=201, summary="Create an item")
  async def create_item(
      *,
      body: Annotated[CreateItemRequest, Body()],
  ) -> Item:
      raise NotImplementedError
  
  
  @router.get("/items/{itemId}", response_model=Item)
  async def get_item(
      *,
      item_id: Annotated[int, Path(alias="itemId")],
  ) -> Item:
      raise NotImplementedError
  
  
  @router.delete("/items/{itemId}", status_code=204)
  async def delete_item(
      *,
      item_id: Annotated[int, Path(alias="itemId")],
  ) -> None:
      raise NotImplementedError
  
  
  
  '''
# ---
# name: test_generate_optional_before_required[repro_router]
  '''
  # Generated by pyoas — do not edit manually. spec: 64226942
  from __future__ import annotations
  
  from typing import Annotated
  from fastapi import APIRouter, Body
  from generated.models.default import Req, Res
  
  router = APIRouter(tags=["default"])
  
  
  @router.post("/repro", response_model=Res)
  async def repro_op(
      *,
      body: Annotated[Req, Body()],
      optional_param: str | None = None,
  ) -> Res:
      raise NotImplementedError
  
  
  
  '''
# ---
# name: test_generate_petstore_30[pets_router_30]
  '''
  # Generated by pyoas — do not edit manually. spec: 46d616e3
  from __future__ import annotations
  
  from typing import Annotated
  from fastapi import APIRouter, Body, Path, Query
  from generated.models.pets import CreatePetRequest, Pet, PetList
  
  router = APIRouter(tags=["pets"])
  
  
  @router.get("/pets", response_model=PetList, summary="List all pets")
  async def list_pets(
      *,
      limit: Annotated[int | None, Query(ge=1, le=100)] = None,
  ) -> PetList:
      raise NotImplementedError
  
  
  @router.post("/pets", response_model=Pet, status_code=201, summary="Create a pet")
  async def create_pet(
      *,
      body: Annotated[CreatePetRequest, Body()],
  ) -> Pet:
      raise NotImplementedError
  
  
  @router.get("/pets/{petId}", response_model=Pet, summary="Get a pet by ID")
  async def get_pet(
      *,
      pet_id: Annotated[int, Path(alias="petId")],
  ) -> Pet:
      raise NotImplementedError
  
  
  
  '''
# ---
# name: test_generate_petstore_30[root_init_30]
  '''
  # Generated by pyoas — do not edit manually. spec: 46d616e3
  from __future__ import annotations
  
  from .pets import router as pets_router  # noqa: F401
  from .store import router as store_router  # noqa: F401
  
  '''
# ---
# name: test_generate_petstore_30[store_router_30]
  '''
  # Generated by pyoas — do not edit manually. spec: 46d616e3
  from __future__ import annotations
  
  from fastapi import APIRouter
  
  router = APIRouter(tags=["store"])
  
  
  @router.get("/store/inventory", response_model=dict[str, int], summary="Get store inventory")
  async def get_inventory(
  ) -> dict[str, int]:
      raise NotImplementedError
  
  
  
  '''
# ---
# name: test_generate_petstore_31[pets_router_31]
  '''
  # Generated by pyoas — do not edit manually. spec: 4baf2ee8
  from __future__ import annotations
  
  from typing import Annotated
  from fastapi import APIRouter, Body, Path, Query
  from generated.models.pets import CreatePetRequest, Pet, PetList
  
  router = APIRouter(tags=["pets"])
  
  
  @router.get("/pets", response_model=PetList, summary="List all pets")
  async def list_pets(
      *,
      limit: Annotated[int | None, Query(ge=1, le=100)] = None,
  ) -> PetList:
      raise NotImplementedError
  
  
  @router.post("/pets", response_model=Pet, status_code=201, summary="Create a pet")
  async def create_pet(
      *,
      body: Annotated[CreatePetRequest, Body()],
  ) -> Pet:
      raise NotImplementedError
  
  
  @router.get("/pets/{petId}", response_model=Pet, summary="Get a pet by ID")
  async def get_pet(
      *,
      pet_id: Annotated[int, Path(alias="petId")],
  ) -> Pet:
      raise NotImplementedError
  
  
  
  '''
# ---
# name: test_generate_read_write[documents_router_read_write]
  '''
  # Generated by pyoas — do not edit manually. spec: 910e0033
  from __future__ import annotations
  
  from typing import Annotated
  from fastapi import APIRouter, Body
  from generated.models.documents import Document, DocumentWrite
  
  router = APIRouter(tags=["documents"])
  
  
  @router.post("/documents", response_model=Document, status_code=201, summary="Create a document")
  async def create_document(
      *,
      body: Annotated[DocumentWrite, Body()],
  ) -> Document:
      raise NotImplementedError
  
  
  @router.get("/documents/{id}", response_model=Document, summary="Get a document")
  async def get_document(
      *,
      id: int,
  ) -> Document:
      raise NotImplementedError
  
  
  
  '''
# ---
# name: test_generate_security_stubs[items_router_secured]
  '''
  # Generated by pyoas — do not edit manually. spec: a4d3d77c
  from __future__ import annotations
  
  from typing import Annotated
  from fastapi import APIRouter, Body
  from generated.models.items import Item
  
  router = APIRouter(tags=["items"])
  
  
  @router.get("/items", summary="List items (requires auth)")
  async def list_items(
      # TODO: add authentication dependency, e.g.: current_user = Depends(get_auth_context)
  ) -> None:
      raise NotImplementedError
  
  
  @router.post("/items", status_code=201, summary="Create item (no auth override)")
  async def create_item(
      *,
      body: Annotated[Item, Body()],
  ) -> None:
      raise NotImplementedError
  
  
  
  '''
# ---
# name: test_generate_security_with_dep_import_path[items_router_secured_with_dep]
  '''
  # Generated by pyoas — do not edit manually. spec: a4d3d77c
  from __future__ import annotations
  
  from typing import Annotated
  from fastapi import APIRouter, Depends, Body
  from generated.models.items import Item
  from myapp.deps.auth import AuthContext, get_auth_context
  
  router = APIRouter(tags=["items"])
  
  
  @router.get("/items", summary="List items (requires auth)")
  async def list_items(
      *,
      current_user: AuthContext = Depends(get_auth_context),
  ) -> None:
      raise NotImplementedError
  
  
  @router.post("/items", status_code=201, summary="Create item (no auth override)")
  async def create_item(
      *,
      body: Annotated[Item, Body()],
  ) -> None:
      raise NotImplementedError
  
  
  
  '''
# ---
# name: test_router_forwards_auth_to_service[items_router_secured_with_service_and_dep]
  '''
  # Generated by pyoas — do not edit manually. spec: a4d3d77c
  from __future__ import annotations
  
  from typing import Annotated
  from fastapi import APIRouter, Depends, Body
  from generated.models.items import Item
  from myapp.services.items import ItemsService, get_items_service
  from myapp.deps.auth import AuthContext, get_auth_context
  
  router = APIRouter(tags=["items"])
  
  
  @router.get("/items", summary="List items (requires auth)")
  async def list_items(
      *,
      current_user: AuthContext = Depends(get_auth_context),
      service: ItemsService = Depends(get_items_service),
  ) -> None:
      await service.list_items(auth=current_user)
  
  
  @router.post("/items", status_code=201, summary="Create item (no auth override)")
  async def create_item(
      *,
      body: Annotated[Item, Body()],
      service: ItemsService = Depends(get_items_service),
  ) -> None:
      await service.create_item(body=body)
  
  
  
  '''
# ---
# name: test_router_with_service_forwarding[orders_router_with_service]
  '''
  # Generated by pyoas — do not edit manually. spec: fc81cd90
  from __future__ import annotations
  
  from typing import Annotated
  from fastapi import APIRouter, Depends, Path
  import uuid
  from generated.models.orders import Order
  from myapp.services.orders import OrdersService, get_orders_service
  
  router = APIRouter(tags=["orders"])
  
  
  @router.get("/orders", response_model=list[Order])
  async def list_orders(
      *,
      service: OrdersService = Depends(get_orders_service),
  ) -> list[Order]:
      return await service.list_orders()
  
  
  @router.get("/orders/{orderId}", response_model=Order)
  async def get_order(
      *,
      order_id: Annotated[uuid.UUID, Path(alias="orderId")],
      service: OrdersService = Depends(get_orders_service),
  ) -> Order:
      return await service.get_order(order_id=order_id)
  
  
  
  '''
# ---
# name: test_router_with_service_forwarding[users_router_with_service]
  '''
  # Generated by pyoas — do not edit manually. spec: fc81cd90
  from __future__ import annotations
  
  from typing import Annotated
  from fastapi import APIRouter, Depends, Path
  import uuid
  from generated.models.users import User
  from myapp.services.users import UsersService, get_users_service
  
  router = APIRouter(tags=["users"])
  
  
  @router.get("/users", response_model=list[User])
  async def list_users(
      *,
      service: UsersService = Depends(get_users_service),
  ) -> list[User]:
      return await service.list_users()
  
  
  @router.get("/users/{userId}", response_model=User)
  async def get_user(
      *,
      user_id: Annotated[uuid.UUID, Path(alias="userId")],
      service: UsersService = Depends(get_users_service),
  ) -> User:
      return await service.get_user(user_id=user_id)
  
  
  
  '''
# ---
# name: test_scaffold_service_imports[orders_service]
  '''
  # Scaffolded by pyoas — safe to edit; won't be overwritten unless overwrite: true.
  from __future__ import annotations
  
  import uuid
  from generated.models.orders import Order
  
  
  class OrdersService:
      async def list_orders(
          self,
      ) -> list[Order]:
          raise NotImplementedError
  
      async def get_order(
          self,
          *,
          order_id: uuid.UUID,
      ) -> Order:
          raise NotImplementedError
  
  
  async def get_orders_service() -> OrdersService:
      # TODO: wire in your dependencies here (e.g. db session, repository) before returning.
      return OrdersService()
  
  '''
# ---
# name: test_scaffold_service_imports[users_service]
  '''
  # Scaffolded by pyoas — safe to edit; won't be overwritten unless overwrite: true.
  from __future__ import annotations
  
  import uuid
  from generated.models.users import User
  
  
  class UsersService:
      async def list_users(
          self,
      ) -> list[User]:
          raise NotImplementedError
  
      async def get_user(
          self,
          *,
          user_id: uuid.UUID,
      ) -> User:
          raise NotImplementedError
  
  
  async def get_users_service() -> UsersService:
      # TODO: wire in your dependencies here (e.g. db session, repository) before returning.
      return UsersService()
  
  '''
# ---
# name: test_scaffold_service_with_auth[items_service_with_auth]
  '''
  # Scaffolded by pyoas — safe to edit; won't be overwritten unless overwrite: true.
  from __future__ import annotations
  
  from generated.models.items import Item
  from myapp.deps.auth import AuthContext
  
  
  class ItemsService:
      async def list_items(
          self,
          *,
          auth: AuthContext,
      ) -> None:
          """List items (requires auth)"""
          raise NotImplementedError
  
      async def create_item(
          self,
          *,
          body: Item,
      ) -> None:
          """Create item (no auth override)"""
          raise NotImplementedError
  
  
  async def get_items_service() -> ItemsService:
      # TODO: wire in your dependencies here (e.g. db session, repository) before returning.
      return ItemsService()
  
  '''
# ---
